--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,7 @@
     position: absolute;
     margin: auto;
     left: 0;
-    right: 0;
-    top: 170px;
+    top: 270px;
     border: 3px solid white;
 }
 
@@ -46,11 +45,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 30px;
     background-color: ghostwhite;
     background-position: left top;
     background-repeat: repeat;
     padding: 20px;
+    max-width: 1200px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -86,10 +86,6 @@
 
 .cityvalue {
     font-weight: 300;
-}
-
-.feed {
-    border-right: 1px dashed red;
 }
 
 .navbar-text {
