--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -1,64 +1,59 @@
-.post {
+
+  .card{
+    display: flex;
+    margin-bottom: 30px;
+  
+    /* padding: 10px;
+   display: flex;
     width: 100%;
+    height: 170px;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-    margin: 30px 0;
-  }
+    margin: auto; */
+  } 
   
-  .postWrapper {
-    padding: 10px;
-  }
   
-  .postTop {
+  
+  .head {
+    display: flex;
+    align-items: center;
+  }
+  .inf {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
   }
-  
-  .postTopLeft {
+  .inf2{
+    
     display: flex;
-    align-items: center;
+    align-items: center;   
+    
   }
   
-  .postProfileImg {
+  .ProfileImg {
     width: 32px;
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
   }
   
-  .postUsername {
+  .Username {
     font-size: 15px;
     font-weight: 500;
     margin: 0 10px;
   }
   
-  .postDate{
+  .Date{
       font-size: 12px;
   }
   
-  .postCenter{
+  .Center{
       margin: 20px 0;
   }
   
-  .postImg{
-      margin-top: 20px;
-      width: 100%;
-      max-height: 200px;
-      object-fit: contain;
-  }
   
-  .postBottom{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-  }
-  
-  .postBottomLeft{
-      display: flex;
-      align-items: center;   
-  }
   
   .likeIcon{
       width: 24px;
@@ -71,8 +66,20 @@
       font-size: 15px;
   }
   
-  .postCommentText{
-      cursor: pointer;
-      border-bottom: 1px dashed gray;
-      font-size: 15px;
-  }
+  /*  */
+
+  .ReplyButton{
+    border: none;
+    padding: 7px;
+    border-radius: 5px;
+    background-color:blue;
+    font-weight: 500;
+    margin-right: 20px;
+    cursor: pointer;
+    color: white;
+    float: right;
+    
+}
+.tweetHr {
+  margin: 20px;
+}
