--- a/src/components/rightbar/Friendlist.css
+++ b/src/components/rightbar/Friendlist.css
@@ -1,63 +1,82 @@
+.friendslistbox {
+    border: 2px solid #DFDFDF;
+    padding: 15px;
+}
+
+.eachFriend {
+    border-bottom: 2px solid #DFDFDF;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+}
+
 .rightbar {
     flex: 3.5;
-  }
-  
-  .rightbarWrapper {
+}
+
+.barWrapper {
     padding: 20px 20px 0 0;
-  }
-  
-  
-  
-  .Title{
-      margin-bottom: 20px;
-  }
-  
-  .FriendList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    background-color: ghostwhite;
+    background-position: left top;
+    background-repeat: repeat;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.Title {
+    margin-bottom: 20px;
+}
+
+.FriendList {
     padding: 0;
     margin: 0;
     list-style: none;
-  }
-  
-  .Title{
+}
+
+.Title {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 10px;
-  }
-  
-  .barInfo{
+}
+
+.barInfo {
     margin-bottom: 30px;
-  }
-  
-  .barInfoItem{
+}
+
+.barInfoItem {
     margin-bottom: 10px;
-  }
-  
-  .barInfoKey{
+}
+
+.barInfoKey {
     font-weight: 500;
     margin-right: 15px;
     color: #555;
-  }
-  
-  .barInfoValue{
+}
+
+.barInfoValue {
     font-weight: 300;
-  }
-  
-  .Followings{
+}
+
+.Followings {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
-  
-  .Following{
+}
+
+.Following {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     cursor: pointer;
-  }
-  
-  .FollowingImg{
+}
+
+.FollowingImg {
     width: 100px;
     height: 100px;
     object-fit: cover;
     border-radius: 5px;
-  }
+}
