--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,15 @@
     object-fit: cover;
 }
 
+.endOfProfileSection {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.chirp-nav {
+    border-bottom: 2px solid #DFDFDF;
+}
+
 .box {
     border-radius: 10px;
     background-color: ghostwhite;
@@ -29,29 +38,18 @@
 }
 
 .profileUserImg {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    position: absolute;
-    margin: auto;
-    left: 0;
-    top: 270px;
-    border: 3px solid white;
+    width: 168px;
+    height: 172px;
+    border: 2px solid #DFDFDF;
 }
 
 .profileInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    border-radius: 30px;
-    background-color: ghostwhite;
-    background-position: left top;
-    background-repeat: repeat;
+    border-radius: 2px;
     padding: 20px;
-    max-width: 1200px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 2px solid #DFDFDF;
 }
 
 .profileInfoName {
