--- a/src/components/explore/Explore.css
+++ b/src/components/explore/Explore.css
@@ -1,11 +1,6 @@
-.friendslistbox {
+.Explorelistbox {
     border: 2px solid #DFDFDF;
     padding: 15px;
-}
-
-.friends-heading {
-    position: relative;
-    top: 18px;
 }
 
 .eachFriend {
@@ -17,7 +12,10 @@
 .rightbar {
     flex: 3.5;
 }
-
+.Explore{
+    font-weight: 500;
+    float: left;
+}
 .barWrapper {
     padding: 20px 20px 0 0;
     display: flex;
@@ -48,23 +46,10 @@
     margin-bottom: 10px;
 }
 
-.barInfo {
-    margin-bottom: 30px;
-}
 
-.barInfoItem {
-    margin-bottom: 10px;
-}
 
-.barInfoKey {
-    font-weight: 500;
-    margin-right: 15px;
-    color: #555;
-}
 
-.barInfoValue {
-    font-weight: 300;
-}
+
 
 .Followings {
     display: flex;
