--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -85,3 +85,73 @@
     object-fit: cover;
     border-radius: 5px;
 }
+
+.Explorelistbox {
+    border: 2px solid #DFDFDF;
+    padding: 15px;
+}
+
+.eachFriend {
+    border-bottom: 2px solid #DFDFDF;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+}
+
+.rightbar {
+    flex: 3.5;
+}
+
+.Explore {
+    font-weight: 500;
+    float: left;
+}
+
+.barWrapper {
+    padding: 20px 20px 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    background-color: ghostwhite;
+    background-position: left top;
+    background-repeat: repeat;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.Title {
+    margin-bottom: 20px;
+}
+
+.FriendList {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.Title {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.Followings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.Following {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.FollowingImg {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+}
